# wgpu-validation-error-repro

./: Cargo.toml
src/: main.rs  shaders.wgsl
