[package]
name = "wgpu-validation-error-repro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28"
wgpu = { git = "https://github.com/gfx-rs/wgpu/", branch = "trunk" }
wgpu-example = { git = "https://github.com/gfx-rs/wgpu/", branch = "trunk" }
